--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,6 +9,8 @@
   
 <!-- ======= STYLE SHEET ======= -->  
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/my_style.css">
+<link rel="stylesheet" type="text/css" href="css/docs.min.css">
 <link rel="stylesheet" type="text/css" href="css/colors/green.css" id="colors"/>
 
 <!-- ======= STYLE SWITCHER ======= --> 
@@ -157,19 +159,94 @@
             <!-- sidebar section -->
             <div class="col-md-4 no-padding right-sidebar">
               <div id="sidebar" class="sidebar-alignment">
-                <a href="#signin" data-toggle="modal" class="btn btn-success btn-block btn-flat">Sign in <i class="fa fa-sign-in"></i> GameForest</a>
+                <!-- chat -->
+                <div class="sidebar-section">
+                <div class="title"><i class="fa fa-gamepad"></i> Чат </div>
+                <div class="panel panel-default">
+                  <div data-spy="scroll" data-offset="0" class="scrollspy-example" style="height:300px;">
+                    <div class="bg-success clearfix" style="padding:10px;">
+                        <div class="chat-text">
+                          <span class="nikename">WOVVAN </span> <span class="nikename">:</span> го дота пацаны хочу играть го го го текст го го го текст го го го текст го го го текст 
+                        </div>
+                        <div class="time">
+                             <span class="label label-warning">21:00</span>
+                        </div>
+                    </div> 
+                    <div class="bg-info clearfix" style="padding:10px;">
+                        <div class="chat-text">
+                          <span class="nikename">PGG </span> <span class="nikename">:</span> Все норм сейчас зайду 
+                        </div>
+                        <div class="time">
+                             <span class="label label-warning">21:01</span>
+                        </div>
+                    </div>
+                    <div class="bg-success clearfix" style="padding:10px;">
+                        <div class="chat-text">
+                          <span class="nikename">WOVVAN </span> <span class="nikename">:</span> давай жду
+                        </div>
+                        <div class="time">
+                             <span class="label label-warning">21:02</span>
+                        </div>
+                    </div> 
+                    <div class="bg-info clearfix" style="padding:10px;">
+                        <div class="chat-text">
+                          <span class="nikename">PGG </span> <span class="nikename">:</span> все я зашел 
+                        </div>
+                        <div class="time">
+                             <span class="label label-warning">21:01</span>
+                        </div>
+                    </div>
+                    <div class="bg-success clearfix" style="padding:10px;">
+                        <div class="chat-text">
+                          <span class="nikename">WOVVAN </span> <span class="nikename">:</span> выворачивай корманы, сейчас наказывать буду
+                        </div>
+                        <div class="time">
+                             <span class="label label-warning">21:00</span>
+                        </div>
+                    </div> 
+                    <div class="bg-info clearfix" style="padding:10px;">
+                        <div class="chat-text">
+                          <span class="nikename">PGG </span> <span class="nikename">:</span> Все норм сейчас зайду 
+                        </div>
+                        <div class="time">
+                             <span class="label label-warning">21:01</span>
+                        </div>
+                    </div>
+                    <div class="bg-success clearfix" style="padding:10px;">
+                        <div class="chat-text">
+                          <span class="nikename">WOVVAN </span> <span class="nikename">:</span> го дота пацаны хочу играть го го го текст го го го текст го го го текст го го го текст 
+                        </div>
+                        <div class="time">
+                             <span class="label label-warning">21:00</span>
+                        </div>
+                    </div> 
+                    <div class="bg-info clearfix" style="padding:10px;">
+                        <div class="chat-text">
+                          <span class="nikename">PGG </span> <span class="nikename">:</span> Все норм сейчас зайду 
+                        </div>
+                        <div class="time">
+                             <span class="label label-warning">21:01</span>
+                        </div>
+                    </div>
+                  </div> 
+                  <div class="panel-footer clearfix">
+                    <div class="form-wrap">
+                      <form method="post" class="form" role="form">
+                        <div class="form-group">
+                          <input type="text" class="form-control" autocomplete="off" name="message" placeholder="Введите текст вашего сообщения...">
+                        </div>
+                        <div class="text-center" style="font-size:18px;">
+                          <button class="btn-primary btn-flat">Отправить</button>
+                        </div>
+                      </form>
+                    </div>
+                </div>
+              </div>
+                </div>
+                <!-- chat -->
                 <!-- latest games -->
                 <div class="sidebar-section">
                 <div class="title"><i class="fa fa-gamepad"></i> Top-10 игроков </div>
-                <div class="categories">
-                  <ul>
-                    <li><a href="#all" data-toggle="tab">All</a></li>
-                    <li><a href="#pc" data-toggle="tab">PC</a></li>
-                    <li><a href="#ps4" data-toggle="tab">PS4</a></li>
-                    <li><a href="#xboxone" data-toggle="tab">Xbox One</a></li>
-                  </ul>
-                <div class="clearfix"></div>
-                </div>
                 <div class="tab-content">
                 <ul id="all" class="tab-pane fade in active content">
                   <!-- row #1 -->
@@ -508,7 +585,86 @@
               <section class="clearfix">
                 <div class="pull-left col-md-2 no-padding" style="">
                  <div style="text-align: center;"> 
-                  <img src="holder.js/100%x100" alt="" />
+                  <img src="holder.js/100%x100" alt="" class="img-thumbnail"/>
+                  <h4>NikeName</h4>
+                 </div>
+                </div>
+                <div class="col-md-10">
+                   <div class="rule clearfix" style="float:left;">
+                    <div style="margin:5px;" class="clearfix">
+                      <span class="label label-danger" style="font-size:18px;text-align:center;width:200px; width: 160px; display: block;float:left;">
+                        AP + боты
+                      </span>
+                      <span class="label label-success" style="font-size:18px;margin-left:10px; width: 60px; display: block;float:left;">
+                        5x5
+                      </span>
+                    </div>
+                    <div style="margin:10px 5px 5px 5px;" class="clearfix">
+                      <div style="float:left; width: 160px;">
+                        <h5>
+                          Опции:
+                        </h5>
+                        <div style="float:left;">
+                          <img src="images/prettyPhoto/for_game/netral_crip.png" alt="">
+                          </div>
+                          <div style="float:left;margin-left:3px;">
+                          <img src="images/prettyPhoto/for_game/rune.png" alt="">
+                          </div>
+                          <div style="float:left;margin-left:3px;">
+                          <img src="images/prettyPhoto/for_game/only_mid.png" alt="">
+                          </div>
+                      </div>
+                      <div style="float:left; margin-left:10px;">
+                        <h5>
+                          Условия:
+                        </h5>
+                          <div style="float:left;margin-left:3px;">
+                          <img src="images/prettyPhoto/for_game/scalp.png" alt="">
+                          <span class="label label-danger" style="margin-left:2px">
+                            2
+                          </span>
+                          </div>
+                          <div style="float:left;margin-left:3px;">
+                          <img src="images/prettyPhoto/for_game/tower.png" alt="">
+                          <span class="label label-success" style="margin-left:2px">
+                            1
+                          </span>
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="time-stav clearfix" style="float:left;margin:5px;">
+                    <div class="time">
+                      <h5>Время:</h5>
+                      <h5 class="my-time">
+                        22:48
+                      </h5>     
+                    </div>  
+                    <div class="stav">
+                      <h5 style="margin-bottom: 7px;">Ставка:</h5>
+                        <span class="label label-danger my-stav" style="font-size:15px;">
+                          50 RUB
+                        </span>   
+                    </div>
+                  </div>
+                  <div class="place-enter clearfix" style="float:left;margin:5px;">
+                    <div class="place">
+                      <h5 style="margin-bottom: 7px;">Места:</h5>
+                      <span class="label label-danger my-place" style="font-size:15px;">
+                          7/10
+                        </span>     
+                    </div>  
+                    <div class="enter">
+                      <a href="#create-game" data-toggle="modal" class="btn btn-success btn-block btn-flat" style="font-size: 22px; padding: 0 10px; margin-top: 13px;">Войти</a> 
+                    </div>
+                  </div>
+                </div>
+              </section>
+          <!-- section  -->
+              <section class="clearfix">
+                <div class="pull-left col-md-2 no-padding" style="">
+                 <div style="text-align: center;"> 
+                  <img src="holder.js/100%x100" alt="" class="img-thumbnail" />
                   <h4>NikeName</h4>
                  </div>
                 </div>
@@ -587,7 +743,7 @@
               <section class="clearfix">
                 <div class="pull-left col-md-2 no-padding" style="">
                  <div style="text-align: center;"> 
-                  <img src="holder.js/100%x100" alt="" />
+                  <img src="holder.js/100%x100" alt="" class="img-thumbnail"/>
                   <h4>NikeName</h4>
                  </div>
                 </div>
@@ -666,7 +822,7 @@
               <section class="clearfix">
                 <div class="pull-left col-md-2 no-padding" style="">
                  <div style="text-align: center;"> 
-                  <img src="holder.js/100%x100" alt="" />
+                  <img src="holder.js/100%x100" alt="" class="img-thumbnail"/>
                   <h4>NikeName</h4>
                  </div>
                 </div>
@@ -745,86 +901,7 @@
               <section class="clearfix">
                 <div class="pull-left col-md-2 no-padding" style="">
                  <div style="text-align: center;"> 
-                  <img src="holder.js/100%x100" alt="" />
-                  <h4>NikeName</h4>
-                 </div>
-                </div>
-                <div class="col-md-10">
-                   <div class="rule clearfix" style="float:left;">
-                    <div style="margin:5px;" class="clearfix">
-                      <span class="label label-danger" style="font-size:18px;text-align:center;width:200px; width: 160px; display: block;float:left;">
-                        AP + боты
-                      </span>
-                      <span class="label label-success" style="font-size:18px;margin-left:10px; width: 60px; display: block;float:left;">
-                        5x5
-                      </span>
-                    </div>
-                    <div style="margin:10px 5px 5px 5px;" class="clearfix">
-                      <div style="float:left; width: 160px;">
-                        <h5>
-                          Опции:
-                        </h5>
-                        <div style="float:left;">
-                          <img src="images/prettyPhoto/for_game/netral_crip.png" alt="">
-                          </div>
-                          <div style="float:left;margin-left:3px;">
-                          <img src="images/prettyPhoto/for_game/rune.png" alt="">
-                          </div>
-                          <div style="float:left;margin-left:3px;">
-                          <img src="images/prettyPhoto/for_game/only_mid.png" alt="">
-                          </div>
-                      </div>
-                      <div style="float:left; margin-left:10px;">
-                        <h5>
-                          Условия:
-                        </h5>
-                          <div style="float:left;margin-left:3px;">
-                          <img src="images/prettyPhoto/for_game/scalp.png" alt="">
-                          <span class="label label-danger" style="margin-left:2px">
-                            2
-                          </span>
-                          </div>
-                          <div style="float:left;margin-left:3px;">
-                          <img src="images/prettyPhoto/for_game/tower.png" alt="">
-                          <span class="label label-success" style="margin-left:2px">
-                            1
-                          </span>
-                          </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="time-stav clearfix" style="float:left;margin:5px;">
-                    <div class="time">
-                      <h5>Время:</h5>
-                      <h5 class="my-time">
-                        22:48
-                      </h5>     
-                    </div>  
-                    <div class="stav">
-                      <h5 style="margin-bottom: 7px;">Ставка:</h5>
-                        <span class="label label-danger my-stav" style="font-size:15px;">
-                          50 RUB
-                        </span>   
-                    </div>
-                  </div>
-                  <div class="place-enter clearfix" style="float:left;margin:5px;">
-                    <div class="place">
-                      <h5 style="margin-bottom: 7px;">Места:</h5>
-                      <span class="label label-danger my-place" style="font-size:15px;">
-                          7/10
-                        </span>     
-                    </div>  
-                    <div class="enter">
-                      <a href="#create-game" data-toggle="modal" class="btn btn-success btn-block btn-flat" style="font-size: 24px; padding: 0 10px; margin-top: 13px;">Войти</a> 
-                    </div>
-                  </div>
-                </div>
-              </section>
-          <!-- section  -->
-              <section class="clearfix">
-                <div class="pull-left col-md-2 no-padding" style="">
-                 <div style="text-align: center;"> 
-                  <img src="holder.js/100%x100" alt="" />
+                  <img src="holder.js/100%x100" alt="" class="img-thumbnail"/>
                   <h4>NikeName</h4>
                  </div>
                 </div>
@@ -1212,5 +1289,7 @@
   <script src="js/jquery.prettyPhoto.js"></script>
   <script src="js/holder.js"></script>
   <script src="js/custom.js"></script>
+  <script src="js/scrollspy.js"></script>
+  <script src="js/tooltip.js"></script>
 </body>
 </html>
