--- a/HTML/lobby.html
+++ b/HTML/lobby.html
@@ -203,57 +203,96 @@
               <div class="col-md-4">
                 <h2>Rules:</h2>
                 <div class="list-group">
-                  <a class="list-group-item ">
-                    <h6 class="list-group-item-heading cursor-default">Без рун <input class="float-right"type="checkbox" value="" checked></h6>
+                  <a class="list-group-item active">
+                    <h6 class="list-group-item-heading cursor-default">Без рун </h6>
                   </a>
-                  <a class="list-group-item">
-                    <h6 class="list-group-item-heading cursor-default">Число смертей до победы 
-                      <select class="float-right">
-                      <option>---</option>
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
-                    </select></h6>
+                  <a class="list-group-item active">
+                    <h6 class="list-group-item-heading cursor-default">Число смертей до победы - 2</h6>
                   </a>
-                  <a  class="list-group-item">
-                    <h6 class="list-group-item-heading cursor-default">Самоубийство считается за смерть!<input type="checkbox" class="float-right" value=""checked></h6>
+                  <a  class="list-group-item active">
+                    <h6 class="list-group-item-heading cursor-default">Самоубийство считается за смерть </h6>
                   </a>
-                  <a  class="list-group-item">
-                    <h6 class="list-group-item-heading cursor-default">Число вышек до победы
-                    <select class="float-right">
-                      <option>---</option>
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                    </select></h6>
+                  <a  class="list-group-item active">
+                    <h6 class="list-group-item-heading cursor-default">Число вышек до победы - 3</h6>
                   </a>
-                  <a  class="list-group-item">
-                    <h6 class="list-group-item-heading cursor-default">Без нейтралов<input type="checkbox"  class="float-right"value="" checked></h6>
+                  <a  class="list-group-item active">
+                    <h6 class="list-group-item-heading cursor-default">Без нейтралов</h6>
                   </a>
-                  <a  class="list-group-item">
-                    <h6 class="list-group-item-heading cursor-default">Крипы только МИД<input type="checkbox" class="float-right" value=""checked></h6>
+                  <a  class="list-group-item active">
+                    <h6 class="list-group-item-heading cursor-default">Крипы только МИД</h6>
                   </a>
                 </div>
               </div>
               <div class="col-md-8">
                 <h2>Lockal chat</h2>
+                <!-- chat -->
+                <div class="sidebar-section">
                 <div class="panel panel-default">
-                  <div class="panel-body" style="height:300px;"></div> 
+                  <div data-spy="scroll" data-offset="0" class="scrollspy-example" style="height:300px;">
+                    <div class="bg-success clearfix" style="padding:10px;">
+                        <div class="chat-text">
+                          <span class="nikename">WOVVAN </span> <span class="nikename">:</span> го дота пацаны хочу играть го го го текст го го го текст го го го текст го го го текст 
+                        </div>
+                        <div class="time">
+                             <span class="label label-warning">21:00</span>
+                        </div>
+                    </div> 
+                    <div class="bg-info clearfix" style="padding:10px;">
+                        <div class="chat-text">
+                          <span class="nikename">PGG </span> <span class="nikename">:</span> Все норм сейчас зайду 
+                        </div>
+                        <div class="time">
+                             <span class="label label-warning">21:01</span>
+                        </div>
+                    </div>
+                    <div class="bg-success clearfix" style="padding:10px;">
+                        <div class="chat-text">
+                          <span class="nikename">WOVVAN </span> <span class="nikename">:</span> давай жду
+                        </div>
+                        <div class="time">
+                             <span class="label label-warning">21:02</span>
+                        </div>
+                    </div> 
+                    <div class="bg-info clearfix" style="padding:10px;">
+                        <div class="chat-text">
+                          <span class="nikename">PGG </span> <span class="nikename">:</span> все я зашел 
+                        </div>
+                        <div class="time">
+                             <span class="label label-warning">21:01</span>
+                        </div>
+                    </div>
+                    <div class="bg-success clearfix" style="padding:10px;">
+                        <div class="chat-text">
+                          <span class="nikename">WOVVAN </span> <span class="nikename">:</span> выворачивай корманы, сейчас наказывать буду
+                        </div>
+                        <div class="time">
+                             <span class="label label-warning">21:00</span>
+                        </div>
+                    </div> 
+                    <div class="bg-info clearfix" style="padding:10px;">
+                        <div class="chat-text">
+                          <span class="nikename">PGG </span> <span class="nikename">:</span> Все норм сейчас зайду 
+                        </div>
+                        <div class="time">
+                             <span class="label label-warning">21:01</span>
+                        </div>
+                    </div>
+                  </div> 
                   <div class="panel-footer clearfix">
                     <div class="form-wrap">
                       <form method="post" class="form" role="form">
                         <div class="form-group">
-                          <input type="text" class="form-control" autocomplete="off" name="message" placeholder="Введите текст вашего сообщения...">
+                          <input type="text" class="form-control" autocomplete="off" name="message" placeholder="Введите текст вашего сообщения..." maxlength="500">
                         </div>
-                        <div class="text-right">
-                          <button class="btn-primary btn-flat">Send</button>
+                        <div class="text-center" style="font-size:18px;">
+                          <button class="btn-success float-right btn-flat">Отправить</button>
                         </div>
                       </form>
                     </div>
-                  </div>
                 </div>
+              </div>
+                </div>
+                <!-- chat -->
               </div>
             </section>
           </div>
