--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -337,9 +337,9 @@
                     <div class="panel-heading">
                         <h3 class="panel-title">Используемые герои в последних 100 играх</h3>
                     </div>
-                    <div class="panel-body panel-scroll">
+                    <div class="panel-body">
                       <div>
-                        <table class="table table-striped">
+                        <table class="table table-striped table-scroll">
                           <thead>
                             <tr>
                                 <th>Герой</th>
@@ -453,8 +453,8 @@
     <div class="panel-heading">
         <h3 class="panel-title">Последние 100 игры</h3>
     </div>
-    <div class="panel-body panel-scroll">
-        <table class="table table-striped">
+    <div class="panel-body">
+        <table class="table table-striped table-scroll ">
             <thead>
             <tr>
                 <th>ID</th>
