--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -48,8 +48,8 @@
   <!-- header -->
   <header>
     <div class="container">
-      <div class="logo pull-left"><a href="index.html"><img src="images/logo.png" alt="logo" /></a></div>
-      <!--<div class="advertisement pull-right"><div class="inline"><a href="#"><img src="images/header_advertisement.png" alt="advertisement" /></a></div></div>-->
+      <!--<div class="logo pull-left"><a href="index.html"><img src="images/logo.png" alt="logo" /></a></div>
+      <div class="advertisement pull-right"><div class="inline"><a href="#"><img src="images/header_advertisement.png" alt="advertisement" /></a></div></div>-->
     </div>
     <!-- navigation -->
     <div id="navigation">
