top login label

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,9 +22,9 @@
   <div id="sub-navigation">
     <div class="container">
       <ul id="user-interface">
-        <li>
+        <!--<li>
           <img src="http://steamcommunity-a.akamaihd.net/public/images/signinthroughsteam/sits_small.png">
-        </li>
+        </li>-->
         <li>
           <a href="#register">FAQ</a>
         </li>
@@ -32,6 +32,33 @@
           <a href="#register">Помощь</a>
         </li>
       </ul>
+      <ul class="nav navbar-nav navbar-right" style="background: #DFA9A9;">
+                                <li>
+                    <a id="informer_new_message" href="#" class="f-s-14" style="padding-top: 10px; padding-bottom: 10px;">
+                        <i class="fa fa-envelope"></i>
+                        <span class="number_unread label" style="display: none;">0</span>
+                    </a>
+                </li>
+
+                
+                <li class="dropdown navbar-user">
+                    <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" style="padding-top: 10px; padding-bottom: 10px;">
+                                                    <img src="http://dizard.ru/public/tmp/img/50_50_auto/56005.jpg" style="width: 20px;">
+                                                <span class="hidden-xs">WOVVAN</span>
+                        <span class="badge badge-success">
+                                                            50.00 руб.
+                                                                                </span> <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu animated fadeInLeft">
+                        <li class="arrow"></li>
+                        <li><a href="/user/personal"><i class="fa fa-user"></i> Личный кабинет</a></li>
+                        <li><a href="/user/74266"><i class="glyphicon glyphicon-stats"></i> Профиль</a></li>
+                        <li><a href="/user/personal/purse/add-money"><i class="fa fa-rub"></i> Пополнить</a></li>
+                        <li class="divider"></li>
+                        <li><a href="/user/logout"><i class="fa fa-power-off"></i> Выйти</a></li>
+                    </ul>
+                </li>
+                            </ul>
       <!--<div id="top-social">
         <span>Receive daily updates:</span>
         <ul>
